--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    overflow: hidden;
+}
+
 section {
     position: absolute;
     width: 100%;
@@ -12,6 +16,18 @@ section {
     justify-content: center;
     align-items: center;
     background: linear-gradient(to bottom, #ff4f8b,#dff1ff);
+}
+
+section::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    bottom: 0;
+    z-index: 10;
+    border-top: 1px solid rgba(255,255,255,0.5);
+    background: rgba(255,255,255,0.1);
+    backdrop-filter: blur(10px);
 }
 
 section .color {
